--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,9 @@ name = "pypi"
 
 [packages]
 django = "*"
+djangorestframework = "*"
+djoser = "*"
+djangorestframework-xml = "*"
 
 [dev-packages]
 
