--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 djoser = "*"
 djangorestframework-xml = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
